@@ -2,6 +2,7 @@ v2.0.0
  - Drop support for ruby 1.9.3, require a minimum of ruby 2.2
  - Upgrade to Rspec 3
  - Upgrade all dependencies to current stable versions
+ - Catch MultiJson::ParseErrors and return SparkApi::InvalidJSON error instead
 
 v1.4.34
  - Version update for releasing v1.4.33 as the tags were set wrong for v1.4.32 release
